# autofeat

./: .gitignore  Dockerfile  README.md  Vis-Revision.ipynb  Vis-Thesis.ipynb  Visualisations-May.ipynb  Visualisations-final.ipynb  Visualisations-workshop.ipynb  Visualisations.ipynb  docker-compose.yml  main.py  pyproject.toml  requirements.txt
algorithms/: __init__.py  base.py  cart.py  helpers.py  id3.py  xgb.py
arda/: arda.py  test_arda.py
augmentation/: algorithm_pipeline.py  algorithm_steps.py  algorithms.py  baseline.py  bfs_pipeline.py  data_preparation_pipeline.py  feat_sel.py  id3_alg.py  join-all.py  neo4j_utils.py  pipeline.py  print_trees.py  rank_object.py  ranking.py  train_algorithms.py  trial_error.py  weight_training.py  weight_training_pipeline.py
augmentation_workshop/: FeatSel.py  algorithm_pipeline.py  algorithm_steps.py  join-all.py
classification_approach/: pipeline.py  regressor.joblib  weight_training_pipeline.py
config/: __init__.py
data/: datasets.csv
data_ingestion/: ingest_data.py
data_preparation/: __init__.py  dataset_base.py  ingest_data.py  join_data.py  utils.py
datasets/: datasets.py
docker/: Dockerfile
docs/: _config.yml  index.md
experiment_results/: accuracy_results_football.csv  accuracy_results_steel_plate_fault.csv  accuracy_results_titanic.csv  ranking_func_results.csv  ranking_func_results_arda_citeseer.csv  ranking_func_results_arda_cora.csv  ranking_func_results_arda_football.csv  ranking_func_results_arda_steel.csv  ranking_func_results_arda_titanic.csv  ranking_func_results_arda_web.csv  (+16 more)
(+190 files in other folders)
