[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "feature-discovery"
version = "0.0.1"

authors = [{ name = "Andra-Denis Ionescu"}]
classifiers = [
  "Programming Language :: Python :: 3"
]

dependencies = [
    "autogluon == 0.7.0",
    "ITMO-FS == 0.3.3",
    "matplotlib == 3.3.4",
    "neo4j == 4.4.0",
    "notebook == 6.4.5",
    "numpy == 1.22.3",
    "pandas == 1.5.3",
    "scikit-learn == 1.2.2",
    "seaborn == 0.11.2",
    "tqdm == 4.64.0",
    "valentine == 0.1.6"
]

readme = "README.md"

requires-python = ">=3.8"

[tool.setuptools.package-dir]
"" = "src"